--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       href="https://fonts.googleapis.com/css?family=Nova+Mono|PT+Sans+Narrow:700&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, user-scalable=no">
 
     <link rel="stylesheet" href="./style.css" />
   </head>
