--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div id="timer_time">-- --</div>
     </div>
 
-    <audio id="music_sound" autoplay>
+    <audio id="music_sound" autoplay loop>
       <source src="./assets/music.mp3" type="audio/mpeg" />
     </audio>
 
